# task-manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tasks.json
includes/: Task.h  datamodel.h  delegate.h  filter_proxy_model.h  headers.h  task.h  task_element_arrangement.h  widget.h
src/: datamodel.cpp  delegate.cpp  filter_proxy_model.cpp  headers.cpp  widget.cpp
